--- a/public/index.html
+++ b/public/index.html
@@ -1,8 +1,8 @@
 <!--
  * @Author: your name
  * @Date: 2019-12-14 15:22:42
- * @LastEditTime: 2019-12-14 15:38:38
- * @LastEditors: your name
+ * @LastEditTime : 2020-01-07 19:13:06
+ * @LastEditors  : Please set LastEditors
  * @Description: In User Settings Edit
  * @FilePath: \tiger-prawn\tiger-prawn-mbfw\public\index.html
  -->
@@ -13,7 +13,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <title>tiger-prawn-mbfw</title>
+    <title>首页</title>
   </head>
   <body>
     <noscript>
